# ready-ai

./: .env.example  .gitignore  AI_INSTRUCTIONS.md  CONTRIBUTING.md  FEATURES.md  LICENSE  MVP.md  NEXT_STEPS.md  OPEN_SOURCE_CHECKLIST.md  OPEN_SOURCE_STATUS.md  PRD.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: self-heal.yml  tests.yml
src/: observability.py
src/agent/: __init__.py  browser_session.py  critic.py  cursor.py  dom_utils.py  executor.py  loop.py  planner.py  recovery.py  state.py  test_runner.py
src/api/: manager.py  models.py  server.py
src/cdp/: __init__.py  browser.py  connection.py  input.py  page.py  runtime.py
src/docs/: __init__.py  auto_healer.py  healing_publisher.py  output.py  parser.py  renderer.py  report_html.py  semantic_diff.py  terminal_output.py  visual_diff.py
src/llm/: __init__.py  client.py  prompts.py
tests/: test_agent_loop_spa_drift.py  test_api.py  test_api_requests.py  test_cdp_messages.py  test_cli_run_config.py  test_doc_parser.py  test_e2e_doc_test.py  test_healing_publisher.py  test_llm_client_compat.py  test_visual_diff.py
tests/fixtures/sample_doc/: docs.md
