[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ready-ai"
version = "0.1.0"
description = "ready-ai: agentic browser automation for SaaS documentation generation using CDP + LLM"
requires-python = ">=3.10"

dependencies = [
    "websockets>=12.0",
    "litellm>=1.40.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.104,<1.0",
    "uvicorn>=0.24,<1.0",
    "httpx>=0.28,<1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "requests>=2.31,<3.0",
    "ruff>=0.4",
]

[project.scripts]
ready-ai = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
cache_dir = "/tmp/ready-ai-pytest-cache"
